gcc/testsuite/rust/rustc/ui/issues/issue-16966_dg.rs
fn main() {
    panic!(std::default::Default::default());
// { dg-error ".E0283." "" { target *-*-* } .-1 }
}

